# agpack

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
agpack/: __init__.py  agents.py  cleanup.py  cli.py  commands.py  config.py  deployer.py  display.py  envsubst.py  errors.py  fetcher.py  fileutil.py  kinds.py  lockfile.py  mcp.py  patch.py  registry.py  resolvers.py  rules.py  skills.py  target_schema.py  targets.py  writer.py
agpack/assets/: __init__.py  agent.py  base.py  command.py  rule.py  skill.py
agpack/builtin_targets/: antigravity.yml  claude.yml  codex.yml  copilot.yml  cursor.yml  gemini.yml  opencode.yml  pi.yml  windsurf.yml
agpack/kinds/: __init__.py  _shared.py  copy_directory.py  copy_file.py  edit_file.py
agpack/templates/: init_global.yml  init_project.yml
tests/: test_builtin_targets.py  test_cli_parallel.py  test_config.py  test_deployer.py  test_envsubst.py  test_fetcher.py  test_hooks.py  test_ignores.py  test_integration.py  test_lockfile.py  test_mcp.py  test_patches.py  test_registry.py  test_rules.py  test_target_schema.py
