[project]
name = "agpack"
dynamic = ["version"]
description = "Fetch and deploy AI agent resources from git repos to local tool directories"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Philipp Thumfart", email = "philipp@thumfart.eu" },
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "tomli-w>=1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/PhilippTh/agpack"
Funding = "https://github.com/sponsors/PhilippTh"

[project.scripts]
agpack = "agpack.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = [

  # Level 1
  "E",    # pycodestyle
  "F",    # pyflakes
  "W",    # warnings
  "C901", # McCabe
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade

  # Level 2
  "B",   # flake8-bugbear (common bugs)
  "S",   # bandit (security)
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "FBT", # flake8-boolean-trap

  # Level 3
  "PT",  # flake8-pytest-style (if you use pytest)
  "G",   # flake8-logging-format
  "ISC", # flake8-implicit-str-concat
  "Q",   # flake8-quotes (consistent quote style)

]
ignore = [
  "S101",   # Use of assert (common in tests)
  "FBT001", # Boolean positional arg in function definition
  "FBT002", # Boolean default arg in function definition
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/*" = ["S105", "S106", "S108", "FBT003"]  # Ignore hardcoded passwords, tmp paths, boolean positional values in tests

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "agpack/__init__.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
    "mypy>=1.17.1",
    "types-PyYAML>=6.0",
    "ruff>=0.12.7",
]

[tool.coverage.run]
source = ["agpack"]
branch = true
omit = [
  "*/tests/*",
  "*/__init__.py",
]

[tool.coverage.report]
# fail_under = 80  # Uncomment once the total coverage is above 80%
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests"]
