[project]
name = "agpack"
dynamic = ["version"]
description = "Fetch and deploy AI agent resources from git repos to local tool directories"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Philipp Thumfart", email = "philipp@thumfart.eu" },
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "PyYAML>=6.0",
    "rich>=13.0",
    "tomlkit>=0.13",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/PhilippTh/agpack"
Funding = "https://github.com/sponsors/PhilippTh"

[project.scripts]
agpack = "agpack.cli:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = [

  # Level 1
  "E",    # pycodestyle
  "F",    # pyflakes
  "W",    # warnings
  "C901", # McCabe,
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade

  # Level 2
  "B",   # flake8-bugbear (common bugs)
  "S",   # bandit (security)
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "RET", # flake8-return
  "FBT", # flake8-boolean-trap

  # Level 3
  
  "PT",  # flake8-pytest-style (if you use pytest)
  "EM",  # flake8-errmsg (better error messages)
  "G",   # flake8-logging-format
  "ISC", # flake8-implicit-str-concat
  "Q",   # flake8-quotes (consistent quote style)

]
ignore = [
  "S101",   # Use of assert (common in tests)
  "FBT001", # Boolean positional arg in function definition
  "FBT002", # Boolean default arg in function definition
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
# Hardcoded-password, /tmp paths, and subprocess checks are noise in tests.
"tests/*" = ["S105", "S106", "S108", "S603", "S607"]
# Cloning git repos is this module's whole purpose — running the
# system ``git`` binary on URL arguments is intentional, not a smell.
# S607 also false-fires on ``r"\\1"`` (regex back-reference replacement
# strings) used inside FetchError messages here.
"agpack/fetcher.py" = ["S603", "S607"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "agpack/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["agpack"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "diff-cover>=9.0",
    "mypy>=1.15",
    "types-PyYAML>=6.0",
    "ruff>=0.15.7",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
